--- a/example-code/css.html
+++ b/example-code/css.html
@@ -1,24 +1,23 @@
 <h2>Language Examples</h2>
 
-<h3>HTML</h3>
+<h3>CSS (with HTML)</h3>
+<img src="http://www.tutorialrepublic.com/lib/images/css-selector.png">
+
 <pre contenteditable>
+  &lt;style type="text/css"&gt;
+    h1 {
+      color: olivedrab;
+      text-align: center;
+    }
+
+    img {
+      width: 200px;
+      padding: 10px;
+      background: steelblue;
+    }
+  &lt;/style&gt;
+
   &lt;h1&gt;Owls are a Hoot!&lt;/h1&gt;
   &lt;p&gt;This is a paragraph&lt;/p&gt;
   &lt;img src="https://media3.giphy.com/media/5Dr8VvwXGngbe/giphy.gif"&gt;
-</pre>
-
-
-<h3>CSS</h3>
-<img src="http://www.tutorialrepublic.com/lib/images/css-selector.png">
-<pre contenteditable>
-  h1 {
-    color: olivedrab;
-    text-align: center;
-  }
-
-  img {
-    width: 200px;
-    padding: 10px;
-    background: steelblue;
-  }
 </pre>
