de-indent pre tags, add explicit internal style/script tags

--- a/example-code/css.html
+++ b/example-code/css.html
@@ -4,20 +4,20 @@
 <img src="http://www.tutorialrepublic.com/lib/images/css-selector.png">
 
 <pre contenteditable>
-  &lt;style type="text/css"&gt;
-    h1 {
-      color: olivedrab;
-      text-align: center;
-    }
+&lt;style&gt;
+  h1 {
+    color: olivedrab;
+    text-align: center;
+  }
 
-    img {
-      width: 200px;
-      padding: 10px;
-      background: steelblue;
-    }
-  &lt;/style&gt;
+  img {
+    width: 200px;
+    padding: 10px;
+    background: steelblue;
+  }
+&lt;/style&gt;
 
-  &lt;h1&gt;Owls are a Hoot!&lt;/h1&gt;
-  &lt;p&gt;This is a paragraph&lt;/p&gt;
-  &lt;img src="https://media3.giphy.com/media/5Dr8VvwXGngbe/giphy.gif"&gt;
+&lt;h1&gt;Owls are a Hoot!&lt;/h1&gt;
+&lt;p&gt;This is a paragraph&lt;/p&gt;
+&lt;img src="https://media3.giphy.com/media/5Dr8VvwXGngbe/giphy.gif"&gt;
 </pre>
