--- a/example-code/js.html
+++ b/example-code/js.html
@@ -2,6 +2,8 @@
 
 <h3>JavaScript</h3>
 <pre contenteditable>
+&lt;script&gt;
+
   number = Math.ceil(Math.random()*5)
 
   guess = prompt("I'm thinking of a number between 1 and 5. Can you guess what number it is?")
@@ -11,4 +13,6 @@
   }
 
   alert("That's Correct!")
+
+&lt;/script&gt;
 </pre>
