add js reference

--- a/example-code/js.html
+++ b/example-code/js.html
@@ -16,3 +16,11 @@
 
 &lt;/script&gt;
 </pre>
+
+<hr>
+<hr>
+
+<h2>Keep Learning!</h2>
+<ul>
+  <li>Try this <a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript">Javascript Tutorial</a> from Mozilla</li>
+</ul>
